# netbox-custom-pages

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_zh_CN.md  README_zh_TW.md  pyproject.toml
.github/workflows/: lint.yml
netbox-custom-pages/: forms.py  models.py
netbox_custom_pages/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_custom_pages/api/: serializers.py  urls.py  views.py
netbox_custom_pages/locale/: .gitkeep
netbox_custom_pages/locale/en/LC_MESSAGES/: django.po
netbox_custom_pages/locale/zh-hans/LC_MESSAGES/: django.mo  django.po
netbox_custom_pages/locale/zh-hant/LC_MESSAGES/: django.po
netbox_custom_pages/locale/zh-tw/LC_MESSAGES/: django.po
netbox_custom_pages/locale/zh_Hant/LC_MESSAGES/: django.mo
netbox_custom_pages/migrations/: 0001_initial.py
netbox_custom_pages/templates/netbox_custom_pages/: csv_import.html  custom_page.html  custom_page_edit.html  custompage_list.html  json_import.html  menu_editor.html  page_render.html  public_index.html
netbox_custom_pages/templates/netbox_custom_pages/docs/: css_policy.html
netbox_custom_pages/tests/: test_models.py  test_views.py
