[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-custom-pages"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your-email@example.com"},
]
description = "在 NetBox 中建立自定義 HTML/JS 頁面"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["netbox_custom_pages*"]