[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-custom-pages"
version = "0.8.0"
authors = [
    {name = "Samuel Lin", email = "threesecond_tw@hotmail.com"},
]
description = "Create custom HTML/JS pages and dashboards within NetBox"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["netbox_custom_pages*"]