[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-custom-pages"
version = "0.8.0"
authors = [
    {name = "Samuel Lin", email = "threesecond_tw@hotmail.com"},
]
description = "Create custom HTML/JS pages and dashboards within NetBox"
license = {text = "Apache-2.0"}
readme = "README.md"
keywords = ["netbox", "netbox-plugin", "dashboard", "custom-pages"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["netbox_custom_pages*"]